--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ https://templatemo.com/tm-567-nomad-force
 
                                 <div class="mt-3 custom-links">
                                     
-                                    <a href="http://www.cooperative-argane.com/nos-produits/huile-argane-cosmetique/" class="text-white custom-link" data-aos="zoom-in" data-aos-delay="100">Read more about argan oil</a>
+                                    <a href="https://www.healthline.com/nutrition/argan-oil#TOC_TITLE_HDR_2" class="text-white custom-link" data-aos="zoom-in" data-aos-delay="100">Read more about argan oil</a>
 
                                     <a href="#contact" class="text-white custom-link" data-aos="zoom-in" data-aos-delay="300">buy now </a>
                                 </div>
